add utility link

--- a/01 - intro/index.html
+++ b/01 - intro/index.html
@@ -32,6 +32,32 @@
   </svg>
   <img class="test" src="../icon/in_round.svg" alt="">
   <div class="bg-icon test"></div>
+  <br><a></a>
+  <span>
+    Полезные ссылки:<br>
+    yoksel pro css
+    -<a href ="http://css.yoksel.ru/">http://css.yoksel.ru/</a> <br> 
+Vivus
+-<a href ="http://maxwellito.github.io/vivus/">http://maxwellito.github.io/vivus/</a> <br>
+Bonsai
+-<a href="https://bonsaijs.org/">https://bonsaijs.org/</a><br>
+Velocity
+-<a href="http://julian.com/research/velocity/">http://julian.com/research/velocity/</a><br>
+Raphaël
+-<a href="http://dmitrybaranovskiy.github.io/raphael/">http://dmitrybaranovskiy.github.io/raphael/</a><br>
+Snap
+-<a href="http://snapsvg.io/">http://snapsvg.io/</a><br>
+Lazy Line Painter
+-<a href="http://lazylinepainter.info/">http://lazylinepainter.info/</a><br>
+SVG.js
+-<a href="http://svgjs.com/">http://svgjs.com/</a><br>
+Walkway
+-<a href="https://github.com/ConnorAtherton/walkway">https://github.com/ConnorAtherton/walkway</a><br>
+GreenSock
+-<a href="https://greensock.com/">https://greensock.com/</a><br>
+HighCharts
+-<a href="http://www.highcharts.com/">http://www.highcharts.com/</a><br>
+  </span>
 </body>
 
 </html>
