--- a/03 - structure/group.html
+++ b/03 - structure/group.html
@@ -21,7 +21,7 @@
 
 <body>
   <svg class="border" width="600" height="400" viewBox="0 0 600 400">
-    <symbol>
+    <symbol> //так же есть defs и g теги (symbol - обьедиянет в себе свойства g (групирует )и defs (скрывает) + может иметь свои координаты)
       <polygon id="elem" points="25,0 30,20 50,20 35,30 40,50 25,35 10,50 15,30 0,20 20,20" />
     </symbol>
     <use x="160" y="150" class="base" xlink:href="#elem" />
