--- a/03 - structure/vbox.html
+++ b/03 - structure/vbox.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <svg class="border" width="300" height="300" viewBox="0 0 400 400">
+  <svg class="border" width="300" height="300" viewBox="0 0 400 400"> // viewBox "первые 2 отступ слева по x,y svg эл-та , потом ширина и высота"
     <circle cx="200" cy="200" r="100" style="fill:green;" />
   </svg>
   </svg>
