--- a/04 - animate/animate.html
+++ b/04 - animate/animate.html
@@ -21,12 +21,12 @@
       height: 200px;
     }
     svg, rect {
-      transition: all 1s;
+      transition: all 1s; /*время анимации*/
     }
 
     rect {
       fill: green;
-      transform-origin: center;
+      transform-origin: center; /*относительно чего делаем трансформацию*/
     }
 
     .hover rect:hover {
