--- a/05 - vivus/index.html
+++ b/05 - vivus/index.html
@@ -4,21 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <script src="//cdn.jsdelivr.net/vivus/latest/vivus.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/vivus/latest/vivus.min.js"></script>
   <title>Vivus</title>
   <style>
     #my-svg {
-      width: 250px;
-      height: 250px;
+      width: 400px;
+      height: 400px;
     }
   </style>
 </head>
 <body>
   <object id="my-svg" data="drawing.svg" type="image/svg+xml"></object>
   <button id="btn">Animate</button>
+  <button id="btn2">Console</button>
   <script>
     btn.addEventListener('click', () => {
       new Vivus('my-svg', {duration: 100});
+    })
+  </script>
+  <script>
+    btn2.addEventListener('click', () => {
+      console.log('click on button consoleee');
     })
   </script>
 </body>
