--- a/02 - figure/line.html
+++ b/02 - figure/line.html
@@ -22,7 +22,7 @@
 <body>
   <svg class="border" width="600" height="400" viewBox="0 0 600 400">
     <line x1="50" y1="200" x2="250" y2="300" class="base"/>
-    <polyline points="300,200 400,300 500,200" class="base" style="fill: transparent"/>
+    <polyline points="300,200 400,300 500,200" class="base" style="fill: transparent"/> //x,y x,y ...корд. точки
     <polygon points = "20,120 230,10 500,150 400,200" class = "base" />
   </svg>
 
